Fixed issues with mega dropdown containers being too wide

--- a/app/assets/stylesheets/bootstrap-tweaks.scss
+++ b/app/assets/stylesheets/bootstrap-tweaks.scss
@@ -590,6 +590,8 @@ body {
     left: 0;
     right: 0;
     background-color: $body-bg;
+
+    > .container { width: auto; }
   }
 }
 
